objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>CASE( Account.RecordTypeId, &quot;012d000000097TK&quot;, &quot;Household Account&quot;, 
&quot;012d000000097TF&quot;, &quot;Organization Account&quot;,

&quot;NA&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adult__c</fullName>
        <formula>IF(ISNULL( Contact_Age__c ), 
IMAGE(&quot;/s.gif&quot;, &quot;No Age Defined&quot;), 
IF(Contact_Age__c &gt; 18, 
IMAGE(&quot;/servlet/servlet.ImageServer?id=015d00000005ykL&amp;oid=00DL0000002BozU&amp;lastMod=1371829547000&quot;, &quot;Contact is an Adult&quot;), 
IF( Contact_Age__c &lt; 18, 
IMAGE(&quot;/servlet/servlet.ImageServer?id=015d00000005ykN&amp;oid=00DL0000002BozU&amp;lastMod=1371829547000&quot;, &quot;Contact is a Minor&quot;), 
IMAGE(&quot;/s.gif&quot;, &quot;Status Flag&quot;) 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adult</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_income_after_training_employmen__c</fullName>
        <label>Annual income after training &amp; employmen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;$12,000</fullName>
                </value>
                <value>
                    <fullName>$12,000 - $20,780</fullName>
                </value>
                <value>
                    <fullName>$20,781 - $25,000</fullName>
                </value>
                <value>
                    <fullName>&gt;$25,001</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_income_before_training__c</fullName>
        <label>Annual income before training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;$12,000</fullName>
                </value>
                <value>
                    <fullName>$12,000 - $20,780</fullName>
                </value>
                <value>
                    <fullName>$20,781 - $25,000</fullName>
                </value>
                <value>
                    <fullName>&gt;$25,001</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_still_in_school__c</fullName>
        <label>Are you still in school?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefits_health_insurance_included__c</fullName>
        <label>Benefits (health insurance included)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Age__c</fullName>
        <formula>FLOOR((TODAY()-Birthdate)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>No Longer With</fullName>
                </value>
                <value>
                    <fullName>Moved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Caregiver/Guardian</fullName>
                </value>
                <value>
                    <fullName>Chapter representative</fullName>
                </value>
                <value>
                    <fullName>Individual Learner</fullName>
                </value>
                <value>
                    <fullName>Instructor</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Members</fullName>
                </value>
                <value>
                    <fullName>NAT Student (Confirmed)</fullName>
                </value>
                <value>
                    <fullName>NAT Student (Prospect)</fullName>
                </value>
                <value>
                    <fullName>PHSS Field personnel</fullName>
                </value>
                <value>
                    <fullName>RCS Billing</fullName>
                </value>
                <value>
                    <fullName>RCS Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County field included in address section of Account and Contact page layouts.</description>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is utilized to support the data migration process. It will contain a combination of the source system identifier and the source system&apos;s unique record identifier. This field should be deleted after all migration activities are complete</description>
        <externalId>true</externalId>
        <label>DM External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DM_Legacy_Owner_Name__c</fullName>
        <description>This is the record owner&apos;s name from the legacy source system.  This field is used for data migration purposes only.</description>
        <inlineHelpText>This is the record owner&apos;s name from the legacy source system.  This field is used for data migration purposes only.</inlineHelpText>
        <label>DM Legacy Owner Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_employed_in_healthcare_field__c</fullName>
        <label>Date employed in healthcare field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_passed_state_exam__c</fullName>
        <label>Date passed state exam</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delta_Data_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, this record was migrated as part of the Delta Data migration project</description>
        <inlineHelpText>If Checked, this record was migrated as part of the Delta Data migration project</inlineHelpText>
        <label>Delta Data Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligibility_for_economic_need_Student__c</fullName>
        <inlineHelpText>Student provided documentation of proof for financial assistance</inlineHelpText>
        <label>Eligibility for economic need</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employed_full_time_or_part_time__c</fullName>
        <label>Employed full time or part time?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employed_in_healthcare_field__c</fullName>
        <label>Employed in (healthcare) field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Enrollees__c</fullName>
        <formula>Text( Account.Estimated_Annual_Enrollees__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Annual Enrollees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>Phone extension for business numbers</description>
        <label>Extension</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follower_Count__c</fullName>
        <description>Social Care: Follower count of social media user</description>
        <label>Follower Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Since_Last_Survey_Sent__c</fullName>
        <description>Hours since last time a survey has been sent to contact.</description>
        <formula>(NOW() - Survey_Last_Sent__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hours since last time a survey has been sent to contact.</inlineHelpText>
        <label>Hours Since Last Survey Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_part_time_is_this_by_choice__c</fullName>
        <label>If part-time, is this by choice?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_yes_pursuing_higher_licensur__c</fullName>
        <inlineHelpText>If yes, are you pursuing higher licensure in the healthcare field?</inlineHelpText>
        <label>If yes, pursuing higher licensure?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will not be used on the page layout but is automatically checked to identify in the PHSS constituent search who is labeled an instructor</description>
        <label>Instructor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keycode__c</fullName>
        <description>created for April 2015 Direct Marketing campaign run out of Business Operations.  intended to capture 3 character code on Postcards and Letters.</description>
        <inlineHelpText>Keycode for used for marketing purposes.</inlineHelpText>
        <label>Keycode</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Constituent_ID__c</fullName>
        <description>This field is used in the CDI search results. The master constituent id is a unique field in the data warehouse.</description>
        <externalId>true</externalId>
        <label>Master Constituent ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Status__c</fullName>
        <label>Military Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
                <value>
                    <fullName>Veteran</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <label>Preferred Method of Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is the contact primarily responsible for the Account.</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Product__c</fullName>
        <label>Primary Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>Aquatics Learn to Swim</fullName>
                </value>
                <value>
                    <fullName>Aquatics Other</fullName>
                </value>
                <value>
                    <fullName>Babysitting</fullName>
                </value>
                <value>
                    <fullName>Basic Water Rescue</fullName>
                </value>
                <value>
                    <fullName>BLS</fullName>
                </value>
                <value>
                    <fullName>Citizen CPR</fullName>
                </value>
                <value>
                    <fullName>Continuing Education Units</fullName>
                </value>
                <value>
                    <fullName>CPR for the Professional Rescuer</fullName>
                </value>
                <value>
                    <fullName>Emergency Medical Response</fullName>
                </value>
                <value>
                    <fullName>Emergency Preparedness</fullName>
                </value>
                <value>
                    <fullName>First Aid</fullName>
                </value>
                <value>
                    <fullName>First Aid/CPR/AED Training</fullName>
                </value>
                <value>
                    <fullName>First Aid Emergency Drills</fullName>
                </value>
                <value>
                    <fullName>Lifeguarding</fullName>
                </value>
                <value>
                    <fullName>Lifeline</fullName>
                </value>
                <value>
                    <fullName>MERT Drills</fullName>
                </value>
                <value>
                    <fullName>Nurse Assistant Training</fullName>
                </value>
                <value>
                    <fullName>OSHA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ready Rating</fullName>
                </value>
                <value>
                    <fullName>Safety Training for Swim Coaches</fullName>
                </value>
                <value>
                    <fullName>Training Supplies</fullName>
                </value>
                <value>
                    <fullName>Water Safety Instructor</fullName>
                </value>
                <value>
                    <fullName>Water Safety Outreach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Head of Household</fullName>
                </value>
                <value>
                    <fullName>Resident of Household</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SABA_Internal_ID__c</fullName>
        <externalId>true</externalId>
        <label>SABA Internal ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SFMC_invalid__c</fullName>
        <description>To be used to exclude contacts from MC connector</description>
        <formula>IF(CONTAINS(FirstName, &quot;Ghost&quot;), true,  
IF(CONTAINS(FirstName, &quot;ghost&quot;), true,  
IF(CONTAINS(LastName, &quot;Ghost&quot;), true,
IF(CONTAINS(LastName, &quot;ghost&quot;), true,
IF(CONTAINS(Account.Name, &quot;bucket&quot;), true,
IF(CONTAINS(Account.Name, &quot;Bucket&quot;), true, false))))))</formula>
        <label>SFMC invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saba_Person_Id__c</fullName>
        <description>This field captures the individuals Person ID from the learning center.</description>
        <inlineHelpText>This field captures the individuals Person ID from the learning center.</inlineHelpText>
        <label>Learning Center ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System field used for Data Migration.</description>
        <label>Source System</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Format_field__c</fullName>
        <formula>Case(MailingState, 
&quot;AL&quot;,&quot;1&quot;, 
&quot;FL&quot;,&quot;1&quot;, 
&quot;GA&quot;,&quot;1&quot;, 
&quot;LA&quot;,&quot;1&quot;, 
&quot;MS&quot;,&quot;1&quot;, 
&quot;Caribbean&quot;,&quot;1&quot;, 
&quot;PR&quot;,&quot;1&quot;, 
&quot;SC&quot;,&quot;1&quot;, 
&quot;NC&quot;,&quot;1&quot;, 
&quot;VA&quot;,&quot;1&quot;, 
&quot;WV&quot;,&quot;1&quot;, 
&quot;MD&quot;,&quot;1&quot;, 
&quot;DE&quot;,&quot;1&quot;, 
&quot;PA&quot;,&quot;1&quot;, 
&quot;DC&quot;,&quot;1&quot;, 
&quot;MI&quot;,&quot;1&quot;, 
&quot;IN&quot;,&quot;1&quot;, 
&quot;OH&quot;,&quot;1&quot;, 
&quot;KY&quot;,&quot;1&quot;, 
&quot;TN&quot;,&quot;1&quot;, 
&quot;NJ&quot;,&quot;1&quot;, 
&quot;NY&quot;,&quot;1&quot;, 
&quot;CT&quot;,&quot;1&quot;, 
&quot;RI&quot;,&quot;1&quot;, 
&quot;MA&quot;,&quot;1&quot;, 
&quot;VT&quot;,&quot;1&quot;, 
&quot;NH&quot;,&quot;1&quot;, 
&quot;ME&quot;,&quot;1&quot;, 
&quot;WA&quot;,&quot;1&quot;, 
&quot;OR&quot;,&quot;1&quot;, 
&quot;CA&quot;,&quot;1&quot;, 
&quot;AK&quot;,&quot;1&quot;, 
&quot;HI&quot;,&quot;1&quot;, 
&quot;Guam&quot;,&quot;1&quot;, 
&quot;Northern Mariana Islands&quot;,&quot;1&quot;, 
&quot;CO&quot;,&quot;1&quot;, 
&quot;WY&quot;,&quot;1&quot;, 
&quot;AZ&quot;,&quot;1&quot;, 
&quot;OK&quot;,&quot;1&quot;, 
&quot;AR&quot;,&quot;1&quot;, 
&quot;TX&quot;,&quot;1&quot;, 
&quot;UT&quot;,&quot;1&quot;, 
&quot;NV&quot;,&quot;1&quot;, 
&quot;NM&quot;,&quot;1&quot;, 
&quot;ID&quot;,&quot;1&quot;, 
&quot;MT&quot;,&quot;1&quot;, 
&quot;ND&quot;,&quot;1&quot;, 
&quot;SD&quot;,&quot;1&quot;, 
&quot;MN&quot;,&quot;1&quot;, 
&quot;WI&quot;,&quot;1&quot;, 
&quot;IL&quot;,&quot;1&quot;, 
&quot;MO&quot;,&quot;1&quot;, 
&quot;KS&quot;,&quot;1&quot;, 
&quot;NE&quot;,&quot;1&quot;, 
&quot;IA&quot;,&quot;1&quot;,
&quot;Refused&quot;,&quot;1&quot;,
&quot; &quot;,&quot;0&quot;, 
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Format field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Last_Sent__c</fullName>
        <description>This field captures the last time a survey was sent via the close case functionality.</description>
        <inlineHelpText>This field captures the last time a survey was sent via the close case functionality.</inlineHelpText>
        <label>Survey Last Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central Time Zone</fullName>
                </value>
                <value>
                    <fullName>Eastern Time Zone</fullName>
                </value>
                <value>
                    <fullName>Mountain Time Zone</fullName>
                </value>
                <value>
                    <fullName>Pacific Time Zone</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assistant_Phone_Number_with_10_Digits</fullName>
        <active>true</active>
        <description>Validates that the Phone number is in (999) 999-9999 format. This works by using the REGEX function to check that the number has ten digits in the (999) 999-9999 format.</description>
        <errorConditionFormula>IF( OR(ISBLANK(AssistantPhone),  $Setup.Validation_Rules__c.Bypass_Rules__c), false, NOT(REGEX(AssistantPhone, &quot;\\D*?(\\d\\D*?){10}&quot;)))</errorConditionFormula>
        <errorDisplayField>AssistantPhone</errorDisplayField>
        <errorMessage>US phone numbers should be in this format: (999) 999-9999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Birth_Date_cannot_be_future_date</fullName>
        <active>true</active>
        <description>Birth Date cannot be future date</description>
        <errorConditionFormula>AND(Birthdate &gt;  DATEVALUE( LastModifiedDate),  $Setup.Validation_Rules__c.Bypass_Rules__c = false)</errorConditionFormula>
        <errorDisplayField>Birthdate</errorDisplayField>
        <errorMessage>Birth Date cannot be greater than current date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bucket_Settings_Must_Be_Defined</fullName>
        <active>true</active>
        <errorConditionFormula>LEN($Setup.Bucket_Account_Settings__c.Bucket_Account_Owner_ID__c)&lt;15 ||  !BEGINS($Setup.Bucket_Account_Settings__c.Bucket_Account_Owner_ID__c, &apos;005&apos;) || LEN( $Setup.Bucket_Account_Settings__c.Bucket_Account_RecordTypeID__c )&lt;15 ||  !BEGINS($Setup.Bucket_Account_Settings__c.Bucket_Account_RecordTypeID__c, &apos;012&apos;) ||   $Setup.Bucket_Account_Settings__c.Maximum_Size_of_Bucket__c&lt;200 ||  ISBLANK($Setup.Bucket_Account_Settings__c.Default_Bucket_Name__c)</errorConditionFormula>
        <errorMessage>Please contact your administrator. Settings for business to consumer contacts need to be defined in Salesforce.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Number_with_10_Digits</fullName>
        <active>true</active>
        <description>Fax Number with 10 Digits</description>
        <errorConditionFormula>IF( OR(ISBLANK(Fax),  $Setup.Validation_Rules__c.Bypass_Rules__c)

, false, NOT(REGEX(Fax, &quot;\\D*?(\\d\\D*?){10}&quot;)))</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>US Fax numbers should be in this format: (999) 999-9999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Format_Mailing_State</fullName>
        <active>false</active>
        <description>This validation rule will evaluate the user&apos;s profile and require the mailing state to be 2 capital letters.</description>
        <errorConditionFormula>/*TSC Agent User = 00ed0000000Idqs */

AND ($User.ProfileId=&quot;00ed0000000Idqs&quot;, State_Format_field__c = &quot;0&quot;,  $Setup.Validation_Rules__c.Bypass_Rules__c = false)</errorConditionFormula>
        <errorDisplayField>MailingState</errorDisplayField>
        <errorMessage>As a TSC agent, please fill in the Mailing State with a valid US state abbreviation or one of the following: Caribbean, Guam, or Northern Mariana Islands. If you do not know the Mailing State, enter &quot;Refused&quot;. Capitalizations are Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Global_Ghost_Contact</fullName>
        <active>true</active>
        <description>Users can not update information on Contact record 003d000001giA46 unless Validation Rule Custom settings is enabled.</description>
        <errorConditionFormula>AND( 
Id = &quot;003d000001giA46&quot;, 
$Setup.Validation_Rules__c.Bypass_Rules__c = False, 
OR( 
ISCHANGED(Email), 
ISCHANGED(Phone), 
ISCHANGED(MobilePhone), 
ISCHANGED(Extension__c), 
ISCHANGED(OtherPhone), 
ISCHANGED(FirstName), 
ISCHANGED(LastName), 
ISCHANGED(MailingCity), 
ISCHANGED(MailingCountry), 
ISCHANGED( MailingState ), 
ISCHANGED( MailingStreet ), 
ISCHANGED( MailingPostalCode ), 
ISCHANGED( OtherCity ), 
ISCHANGED( OtherCountry ), 
ISCHANGED( OtherState ), 
ISCHANGED( OtherStreet ), 
ISCHANGED( OtherPostalCode ), 
ISCHANGED(Description)))</errorConditionFormula>
        <errorMessage>You are not allowed to edit this contact, because it is part of the Ghost Call Contact automation process. Please contact your Salesforce administrator if you have any questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Home_Phone_Number_with_10_Digits</fullName>
        <active>true</active>
        <description>Validates that the Home Phone number is in (999) 999-9999 format.</description>
        <errorConditionFormula>IF( OR(ISBLANK(HomePhone),  $Setup.Validation_Rules__c.Bypass_Rules__c), false, NOT(REGEX(HomePhone, &quot;\\D*?(\\d\\D*?){10}&quot;)))</errorConditionFormula>
        <errorDisplayField>HomePhone</errorDisplayField>
        <errorMessage>US phone numbers should be in this format: (999) 999-9999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Address_Fields_required</fullName>
        <active>false</active>
        <description>Validates that the contact Mailing Street, Mailing City, and Mailing Country
are provided</description>
        <errorConditionFormula>OR(
LEN( MailingStreet ) = 0,
LEN( MailingCity ) = 0,
LEN( MailingCountry ) = 0
)</errorConditionFormula>
        <errorMessage>Mailing Street, City, and Country are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Address_Fields_required_no_cntry</fullName>
        <active>true</active>
        <description>Validates that the contact Mailing Street and Mailing City,are provided</description>
        <errorConditionFormula>AND(
   OR($Profile.Id = &quot;00ed0000000IUFH&quot;),
   OR(
      LEN( MailingStreet ) = 0,
      LEN( MailingCity ) = 0
      ),
$Setup.Validation_Rules__c.Bypass_Rules__c = false
    )
 

/*ARC Sales User = 00ed0000000IUFH */
/*Bluewolf has added the ARC Sales Profile as the only profile where the validation rule is relative */</errorConditionFormula>
        <errorMessage>Mailing Street and City are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Street_is_Required</fullName>
        <active>true</active>
        <description>Validates that the contact Mailing Street is provided.</description>
        <errorConditionFormula>AND(
OR($Profile.Id = &quot;00ed0000000IUFH&quot;),
OR(LEN( MailingState )= 0),
$Setup.Validation_Rules__c.Bypass_Rules__c = false
)

/*ARC Sales User = 00ed0000000IUFH */
/*Bluewolf has added the ARC Sales Profile as the only profile where the validation rule is relative */</errorConditionFormula>
        <errorDisplayField>MailingStreet</errorDisplayField>
        <errorMessage>Mailing Street is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_ZIP_Code</fullName>
        <active>false</active>
        <description>Validates that the contact Mailing Zip/Postal Code is in 99999 or 99999-9999
format if Mailing Country is USA or blank.</description>
        <errorConditionFormula>AND(
OR(MailingCountry = &quot;USA&quot;, LEN(MailingCountry) = 0),
OR(
AND(LEN(MailingPostalCode) &lt;&gt;5, LEN(MailingPostalCode) &lt;&gt;
10),
NOT(CONTAINS(&quot;0123456789&quot;, LEFT( MailingPostalCode, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( MailingPostalCode , 2, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( MailingPostalCode , 3, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( MailingPostalCode , 4, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( MailingPostalCode , 5, 1))),
AND(
LEN(MailingPostalCode) = 10,
OR(
MID( MailingPostalCode , 6, 1) &lt;&gt; &quot;-&quot;,
NOT(CONTAINS(&quot;0123456789&quot;, MID( MailingPostalCode , 7, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( MailingPostalCode , 8, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( MailingPostalCode , 9, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( MailingPostalCode , 10, 1)))
)
)
),$Setup.Validation_Rules__c.Bypass_Rules__c = false
)</errorConditionFormula>
        <errorDisplayField>MailingPostalCode</errorDisplayField>
        <errorMessage>Zip code must be in 99999 or 99999-9999 format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RCS_Billing_And_Shipping_Only_For_RCSPO</fullName>
        <active>false</active>
        <description>RCS PO Account can only have contacts with contact Type &apos;RCS Billing&apos; and &apos;RCS Shipping&apos;.</description>
        <errorConditionFormula>AND(!OR(INCLUDES(Contact_Type__c, &quot;RCS Billing&quot;), INCLUDES(Contact_Type__c, &quot;RCS Shipping&quot;)), 
	Account.OwnerId = &apos;0050V000006kiTY&apos;)</errorConditionFormula>
        <errorMessage>Contact Type for RCS Account should be RCS Billing or RCS Shipping.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_RCS_Billing_for_Other_Account</fullName>
        <active>false</active>
        <description>Restrict creating RCS Billing Contact for Accounts other than RCSPO.</description>
        <errorConditionFormula>AND(
Account.OwnerId &lt;&gt; &apos;0050V000006kiTY&apos;,
OR(INCLUDES(Contact_Type__c, &quot;RCS Billing&quot;), INCLUDES(Contact_Type__c, &quot;RCS Shipping&quot;))
)</errorConditionFormula>
        <errorMessage>You cannot have RCS Billing contact type with Training Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_change_in_CommunityUserAccount</fullName>
        <active>false</active>
        <description>This validation rule restricts change in Account Name when &apos;SABA Internal ID&apos; is present.</description>
        <errorConditionFormula>AND(!ISBLANK(SABA_Internal_ID__c), ISCHANGED(AccountId), NOT($Permission.Contact_Account_change_for_community_user))</errorConditionFormula>
        <errorMessage>You cannot change account for this contact record.</errorMessage>
    </validationRules>
</CustomObject>